--- a/pom.xml
+++ b/pom.xml
@@ -71,9 +71,9 @@
             <version>31.1-jre</version>
         </dependency>
         <dependency>
-            <groupId>javax.xml.bind</groupId>
-            <artifactId>jaxb-api</artifactId>
-            <version>2.1</version>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-xml</artifactId>
+            <version>2.13.4</version>
         </dependency>
     </dependencies>
     <build>
